--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     // ❗ Debug properly using the Console
 
     // 👉 CHALLENGE 1
-    function profileActivation() {
+    function profileActivation(profile, reason) {
       // 🧠 profileActivation takes two arguments, profile and reason, which are an object and a string respectively
       //  The reason arg is only used -and therefore required- to deactivate profiles, not to activate them
       //  The profile arg has an `active` property holding a Boolean value
@@ -85,7 +85,30 @@
       //    * If the profile is active but it has a `reason` prop, return the string "confirm status manually"
       //    * If the profile is **missing** an `active` prop, return the string "impossible to ascertain status"
       // 🌟 HINT: to confirm the existence of a prop, check that its value is not undefined
+
+      if (!("active" in profile)) {
+        return "impossible to ascertain status"
+     }
+
+       if (profile.active) {
+        if ("reason" in profile) {
+      return "confirm status manually"
+     }
+
+       profile.active = false;
+       profile.reason = reason;
+    }   else {
+        if (!("reason" in profile)) {
+      return "confirm status manually"
     }
+    
+       delete profile.reason
+       profile.active = true
+     }
+
+        return profile
+  }
+
 
     // 👉 CHALLENGE 2
     function mineSweeper() {
