--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
    }
 
     // 👉 CHALLENGE 3
-    function booleanize() {
+    function booleanize(obj) {
       // 🧠 booleanize takes an object as its single argument, which can have any number of properties
       // Loop over the properties and then return the object, after applying the following transformations:
       //    * If a value is the number zero, it must be transformed into the Boolean false
@@ -153,6 +153,21 @@
       // 🧠 Edge cases:
       //    * If a property name exceeds 9 characters, return the string "shorten all prop names to 9 chars or less"
       // 🌟 HINT: careful not to perform any unintended changes on the object
+
+     for (let prop in obj) {
+      if (prop.length > 9) {
+      return "shorten all prop names to 9 chars or less"
+    }
+      if (obj[prop] === 0) {
+      obj[prop] = false
+     } else if (obj[prop] === 1) {
+      obj[prop] = true
+     } else if (obj[prop] === null) {
+      delete obj[prop]
+    }
+  }
+     return obj
+
     }
 
     // 👉 CHALLENGE 4
